Check in PHP SDK for web forms

--- a/PHP/examples/index.html
+++ b/PHP/examples/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -10,18 +10,6 @@
     <script type="text/javascript" src="https://cms-1.dailystory.com/Scripts/ds-landingpages.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="../content/Site.css">
-    <!-- DailyStory -->
-    <script type="text/javascript">
-    (function (d, a, i, l, y, s, t, o, r, y) {
-        d._dsSettings = i;
-        r = a.createElement('script');
-        o = a.getElementsByTagName('script')[0];
-        r.src = '//us-1.dailystory.com/ds/ds' + i + '.js';
-        r.async = true;
-        r.id = 'ds-sitescript';
-        o.parentNode.insertBefore(r, o);
-    })(window, document, '<?php echo $siteId ?>');
-    </script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -32,11 +20,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="../" class="navbar-brand">Home</a>
+                <a href="" class="navbar-brand">Home</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="../webforms/" class="navbar-brand">Web Forms</a></li>
+                    <li><a href="webforms" class="navbar-brand">Web Forms</a></li>
                 </ul>
             </div>
         </div>
@@ -44,9 +32,9 @@
     <div class="container body-content">
 
         <div class="jumbotron">
-            <h1>DailyStory .NET SDK Samples</h1>
-            <p class="lead">This sample ASP.NET application demonstrates how to use the DailyStory .NET SDK.</p>
-            <p><a href="https://docs.dailystory.com/sdk/dotnet" class="btn btn-primary btn-lg">DailyStory .NET SDK Documentation &raquo;</a></p>
+            <h1>DailyStory PHP SDK Samples</h1>
+            <p class="lead">This sample PHP application demonstrates how to use the DailyStory PHP SDK.</p>
+            <p><a href="https://docs.dailystory.com/sdk/php" class="btn btn-primary btn-lg">DailyStory PHP SDK Documentation &raquo;</a></p>
         </div>
 
         <div class="row">
